--- a/app/assets/stylesheets/colors.scss
+++ b/app/assets/stylesheets/colors.scss
@@ -2,3 +2,15 @@
 
 //メインのバックグラウンドカラー
 $main-background: #f5f5f5;
+
+//記事のバックグラウンドカラー
+$article-background: #fff;
+
+//記事のタイトルカラー
+$title-color: #0693cd;
+
+//ボーダーカラー
+$border: #ccc;
+
+//asideフォントカラー
+$aside-font-color: #444;
