--- a/app/views/articles/_article.html.haml
+++ b/app/views/articles/_article.html.haml
@@ -1,4 +1,8 @@
-.title
-  =article.title
-.content
-  =article.content
+.article-entry
+  .article-entry-header
+    .article-entry-header__date
+      =article.created_date
+    .article-entry-header__title
+      =article.title
+  .content
+    =article.content
