--- a/app/views/articles/_links.html.haml
+++ b/app/views/articles/_links.html.haml
@@ -2,5 +2,9 @@
   .links__title リンク
   .links__urls
     %ul
-      %li twitter
-      %li HATENK王
+      %li
+        %a{href: "https://twitter.com/wapnaitei"}
+          twitter
+      %li
+        %a{href: "http://www.hatenko2017.com/"}
+          HATENK王
