--- a/app/views/articles/_search.html.haml
+++ b/app/views/articles/_search.html.haml
@@ -1,4 +1,6 @@
 .search
   .search__title 検索
-  .search__text-form
-    %input.search__text-form-input
+  = form_tag("/articles/search", method: :get, class: "search__text-form") do
+    %input{type: "text", name: "search", class: "search__text-form-input", placeholder: "記事を検索"}
+    %button{type: "submit", class: "search__text-form-bottun"}
+      %i{class: "fa fa-search fa-2x"}
