--- a/app/views/articles/_twitter.html.haml
+++ b/app/views/articles/_twitter.html.haml
@@ -1,1 +1,2 @@
 .twitter
+  <a class="twitter-timeline" href="https://twitter.com/wapnaitei?ref_src=twsrc%5Etfw">Tweets by wapnaitei</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
