--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,7 +9,22 @@
     =favicon_link_tag
   %body
     .header
-      .global-menu
+      .header__title
+        .header__title__main 株式会社ワークスアプリケーションズ 内定者公式ブログ
+        .header__title__sub 株式会社ワークスアプリケーションズ2018年入社予定者が、就活に関する考え、 インターンシップ情報、会社情報、その他の活動等を発信していくブログです。
+
+      #menu
+        .global-menu
+          .item
+            = link_to "2018年入社予定者インタビュー", "/articles/search/1"
+          .item
+            = link_to "パスホルダーインタビュー", "/articles/search/2"
+          .item
+            = link_to "Works Way Woker インタビュー", "/articles/search/3"
+          .item
+            = link_to "HATENK王インタビュー", "/articles/search/4"
+          .item
+            = link_to "その他会社に関する情報", "/articles/search/5"
     .main
       = yield
 
