--- a/app/assets/stylesheets/aside.scss
+++ b/app/assets/stylesheets/aside.scss
@@ -3,6 +3,7 @@
 
 .aside {
   width: 20%;
+  float: right;
 }
 
 .search {
@@ -23,6 +24,14 @@
       margin: 0 auto;
       padding: 0 40px 0 20px;
       border: none;
+    }
+
+    &-bottun{
+      position: absolute;
+      right: 1px;
+      top: 11px;
+      height: 39px;
+      width: 35px;
     }
   }
 }
@@ -49,6 +58,11 @@
   }
 }
 
+.twitter{
+  height: 500px;
+  overflow: scroll;
+}
+
 li {
   list-style-type: none;
 }
@@ -65,4 +79,8 @@ li {
   margin-bottom: 10px;
   padding: 10px;
   background-color: $article-background;
+}
+
+.paginate-wrapper {
+  height: 50px;
 }
