--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -4,4 +4,64 @@
 .header {
   height: 250px;
   background-image: image-url("header-image.jpg");
+  position: relative;
+  padding-top: 30px;
+
+  &__title {
+    width: 80%;
+    height: 70%;
+    margin: auto;
+    background-image: image-url("header__title-image.jpg");
+    background-size: cover;
+    color: #fff;
+    text-shadow: 0 0 20px #000;
+    text-align: center;
+    vertical-align: middle;
+
+    &__main {
+      margin-top: 45px;
+      font-size: 35px;
+      display: inline-table;
+      font-weight: bold;
+    }
+
+    &__sub {
+      margin-top: 10px;
+      font-size: 15px;
+      display: inline-table;
+    }
+  }
+}
+
+#menu {
+  width: 100%;
+  height: 68px;
+  bottom: 0;
+  position: absolute;
+}
+
+.global-menu{
+  display: table;
+  width: 80%;
+  height: 60px;
+  margin: auto;
+
+  .item {
+    &:hover {
+      background-color: #ffffff;
+
+      a:hover {
+        color: $title-color;
+      }
+    }
+
+    a:visited{
+      color: #ffffff;
+    }
+
+    text-align: center;
+    vertical-align: middle;
+    display: table-cell;
+    font-weight: bold;
+  }
 }
