--- a/app/views/articles/edit.html.haml
+++ b/app/views/articles/edit.html.haml
@@ -1,6 +1,10 @@
 .new-article-create-wrapper
   = form_for @article do |f|
-    .new-article-title 記事を編集します。
+    %ul
+      %li.new-article-title 記事を編集します。
+      %li
+        = f.submit(name: "commit", type: "submit", value: "Update", class: "form-bottun", id: "edit-form-bottun")
+
     %p
       = f.label :title, value: "記事のタイトル", class: "form-setting"
       = f.text_field(:title, placeholder: "記事のタイトルを入力してください", type: "text", class: "new-article-title-textfield", size: "70")
@@ -9,5 +13,4 @@
       = f.text_field(:sub_title, placeholder: "記事のサブタイトルを入力してください", type: "text", class: "new-article-title-textfield", size: "70")
     %p
       = f.label :content, value: "記事の内容", class: "form-setting"
-      = f.text_area(:content, placeholder: "記事を入力してください", type: "text", class: "new-article-content-textfield", size: "70x20", wrap: "hard")
-    = f.submit(name: "commit", type: "submit", value: "Update", class: "form-bottun")
+      = f.text_area(:content, placeholder: "記事を入力してください", type: "text", class: "new-article-content-textfield", size: "150x50", wrap: "hard")
