--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -84,11 +84,19 @@ a:active { color:$title-color; text-decoration:none }
   margin-bottom: 20px;
   padding: 24px 32px;
   position: relative;
+  border-radius: 4px;
+  box-shadow: 3px 5px #bfbfbf;
+
+  &:hover {
+    top: -4px;
+    box-shadow: 7px 9px #bfbfbf;
+  }
 
   &-header {
 
     &__date{
       font-size: 80%;
+      color: black;
     }
 
     &__title {
@@ -101,6 +109,7 @@ a:active { color:$title-color; text-decoration:none }
     &__genre{
       margin-top: 10px;
       font-size: 80%;
+      color: black;
     }
   }
 
@@ -116,6 +125,7 @@ a:active { color:$title-color; text-decoration:none }
 
     &__content{
       float: left;
+      color: black;
     }
   }
 }
@@ -129,4 +139,129 @@ a:active { color:$title-color; text-decoration:none }
 
 .twitter {
   margin-bottom: 50px;
+}
+
+.show__article {
+  float: left;
+  width: 70%;
+
+  blockquote {
+    margin: 30px 0;
+    position: relative;
+    padding: 30px;
+    background-color: #f6f6f6;
+    border-radius: 10px;
+  }
+
+  blockquote::after {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    opacity: .2;
+    font-family: serif;
+    font-size: 500%;
+    line-height: 0;
+    content: '”';
+  }
+
+  blockquote::before {
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    opacity: .2;
+    font-family: serif;
+    font-size: 500%;
+    line-height: 1;
+    content: '“';
+  }
+
+  h2 {
+    margin: 32px -32px 20px -32px;
+    padding: 12px 16px;
+    border-left: 6px solid #444;
+    background-color: #f6f6f6;
+    color: #444;
+    font-size: 20px;
+    font-weight: bold;
+    line-height: 1.4;
+    letter-spacing: 1px;
+  }
+
+
+  &-body {
+    p {
+      margin-top: 10px;
+      letter-spacing: 0.2px;
+      line-height: 140%;
+      color: black;
+      font-family:"Yu Gothic Medium", "游ゴシック Medium", YuGothic, "游ゴシック体", "ヒラギノ角ゴ Pro W3", "メイリオ", sans-serif;
+      display: block;
+      -webkit-margin-before: 1em;
+      -webkit-margin-after: 1em;
+      -webkit-margin-start: 0px;
+      -webkit-margin-end: 0px;
+    }
+
+    img {
+      width: 640px;
+      height: 440px;
+      background-size: cover;
+    }
+
+    ol {
+      margin-top: 10px;
+      border: 1px solid #e4e4e4;
+      padding: 20px 10px 20px 40px;
+      border-radius: 10px;
+
+      li {
+        margin-top: 10px;
+      }
+    }
+  }
+
+  &-entry {
+    background-color: $article-background;
+    margin-bottom: 20px;
+    padding: 24px 32px;
+    position: relative;
+    border-radius: 4px;
+
+    &-header {
+
+      &__date{
+        font-size: 80%;
+        color: black;
+      }
+
+      &__title {
+        margin-top: 10px;
+        color: $title-color;
+        font-weight: bold;
+        font-size: 25px;
+      }
+
+      &__genre{
+        margin-top: 10px;
+        font-size: 80%;
+        color: black;
+
+        a{
+          color: black;
+        }
+      }
+    }
+  }
+
+  &-body {
+    margin: 10px 0;
+    @include clearfix();
+
+    &__image{
+      float: left;
+      background-size: cover;
+      margin-right: 10px;
+    }
+  }
 }
