--- a/app/assets/stylesheets/aside.scss
+++ b/app/assets/stylesheets/aside.scss
@@ -2,8 +2,9 @@
 @import "mixin.scss";
 
 .aside {
-  width: 20%;
-  float: right;
+  width: 230px;
+  float: left;
+  margin-left: 60px;
 }
 
 .search {
@@ -83,4 +84,22 @@ li {
 
 .paginate-wrapper {
   height: 50px;
+}
+
+.archive {
+  margin-top: 40px;
+
+  &__title {
+    margin-bottom: 10px;
+    padding: 5px 15px;
+    border-left: 5px solid #ccc;
+    color: #444;
+    font-size: 16px;
+    font-weight: bold;
+    letter-spacing: 2px;
+  }
+
+  &__contents {
+    background-color: #fff;
+  }
 }
