archive機能の実装

--- a/app/assets/stylesheets/aside.scss
+++ b/app/assets/stylesheets/aside.scss
@@ -53,7 +53,7 @@
     li{
       text-decoration: none;
       border-top: 1px solid #acacac;
-      padding: 8px 0;
+      padding: 10px;
       color: #0693cd !important;
     }
   }
@@ -101,7 +101,8 @@ li {
 
   &__contents {
     background-color: #fff;
-    padd}
+    padding: 10px;
+  }
 
   &__content {
     margin-top: 10px;
