--- a/app/assets/stylesheets/show_article.scss
+++ b/app/assets/stylesheets/show_article.scss
@@ -14,3 +14,33 @@
   clear: both;
   height: 40px;
 }
+
+#pageTop {
+
+  position: fixed;
+  bottom: 50px;
+  right: 110px;
+}
+
+ 
+
+#pageTop a {
+  display: block;
+  z-index: 999;
+  padding: 8px;
+  border-radius: 50px;
+  width: 80px;
+  height: 80px;
+  background-color: #9FD6D2;
+  color: #fff;
+  font-weight: bold;
+  text-decoration: none;
+  text-align: center;
+}
+
+ 
+
+#pageTop a:hover {
+  text-decoration: none;
+  opacity: 0.7;
+}
